--- a/notebooks/scraping wikipedia.ipynb
+++ b/notebooks/scraping wikipedia.ipynb
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 266,
+   "execution_count": 295,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -143,10 +143,10 @@
     "#         df['start_date'] = df[date_col] - \n",
     "#         df['end_date'] = df[date_col] +\n",
     "    \n",
-    "#     if isinstance(save, str):\n",
-    "#         df.to_csv(save, index=False)\n",
-    "#     if combine_to_master:\n",
-    "#         add_to_master_table(df)\n",
+    "    if isinstance(save, str):\n",
+    "        df.to_csv(save, index=False)\n",
+    "    if combine_to_master:\n",
+    "        add_to_master_table(df, sort=sort)\n",
     "    return df\n",
     "\n",
     "\n",
@@ -158,213 +158,20 @@
     "    return cdf\n",
     "\n",
     "\n",
-    "def add_to_master_table(df):\n",
+    "def add_to_master_table(df, sort):\n",
     "    try:\n",
     "        mdf = pd.read_csv('../data/master_table.csv')\n",
     "    except:\n",
     "        df.to_csv('../data/master_table.csv', index=False)\n",
     "    else:\n",
-    "        new_df = concatenate_tables(mdf, df, sort='Date')\n",
+    "        new_df = concatenate_tables(mdf, df, sort='date')\n",
     "        new_df.to_csv('../data/master_table.csv', index=False)\n",
     "    return df\n"
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<br><br>\n",
-    "\n",
-    "- - - \n",
-    "- - - \n",
-    "\n",
-    "<br>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Code"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 267,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>date</th>\n",
-       "      <th>Event</th>\n",
-       "      <th>source</th>\n",
-       "      <th>start_date</th>\n",
-       "      <th>end_date</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <td>0</td>\n",
-       "      <td>4600000000</td>\n",
-       "      <td>The planet Earth forms from the accretion disc...</td>\n",
-       "      <td>https://en.wikipedia.org/wiki/Timeline_of_the_...</td>\n",
-       "      <td>4600000000</td>\n",
-       "      <td>4600000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>1</td>\n",
-       "      <td>4500000000</td>\n",
-       "      <td>According to the giant impact hypothesis, the ...</td>\n",
-       "      <td>https://en.wikipedia.org/wiki/Timeline_of_the_...</td>\n",
-       "      <td>4500000000</td>\n",
-       "      <td>4500000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>2</td>\n",
-       "      <td>4404000000</td>\n",
-       "      <td>First appearance of liquid water on Earth.</td>\n",
-       "      <td>https://en.wikipedia.org/wiki/Timeline_of_the_...</td>\n",
-       "      <td>4404000000</td>\n",
-       "      <td>4404000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>3</td>\n",
-       "      <td>4280000000</td>\n",
-       "      <td>Earliest possible appearance of life on Earth....</td>\n",
-       "      <td>https://en.wikipedia.org/wiki/Timeline_of_the_...</td>\n",
-       "      <td>4280000000</td>\n",
-       "      <td>4280000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>4</td>\n",
-       "      <td>4000000000</td>\n",
-       "      <td>Formation of a greenstone belt of the Acasta G...</td>\n",
-       "      <td>https://en.wikipedia.org/wiki/Timeline_of_the_...</td>\n",
-       "      <td>4000000000</td>\n",
-       "      <td>4000000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>142</td>\n",
-       "      <td>105</td>\n",
-       "      <td>Martha, last known passenger pigeon, dies</td>\n",
-       "      <td>https://en.wikipedia.org/wiki/Timeline_of_the_...</td>\n",
-       "      <td>105</td>\n",
-       "      <td>105</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>143</td>\n",
-       "      <td>83</td>\n",
-       "      <td>The thylacine goes extinct in a Tasmanian zoo,...</td>\n",
-       "      <td>https://en.wikipedia.org/wiki/Timeline_of_the_...</td>\n",
-       "      <td>83</td>\n",
-       "      <td>83</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>144</td>\n",
-       "      <td>67</td>\n",
-       "      <td>The Caribbean monk seal goes extinct[78]</td>\n",
-       "      <td>https://en.wikipedia.org/wiki/Timeline_of_the_...</td>\n",
-       "      <td>67</td>\n",
-       "      <td>67</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>145</td>\n",
-       "      <td>11</td>\n",
-       "      <td>The baiji, the Yangtze river dolphin, becomes ...</td>\n",
-       "      <td>https://en.wikipedia.org/wiki/Timeline_of_the_...</td>\n",
-       "      <td>11</td>\n",
-       "      <td>11</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>146</td>\n",
-       "      <td>8</td>\n",
-       "      <td>The western black rhinoceros is declared extinct</td>\n",
-       "      <td>https://en.wikipedia.org/wiki/Timeline_of_the_...</td>\n",
-       "      <td>8</td>\n",
-       "      <td>8</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>147 rows × 5 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "           date                                              Event  \\\n",
-       "0    4600000000  The planet Earth forms from the accretion disc...   \n",
-       "1    4500000000  According to the giant impact hypothesis, the ...   \n",
-       "2    4404000000         First appearance of liquid water on Earth.   \n",
-       "3    4280000000  Earliest possible appearance of life on Earth....   \n",
-       "4    4000000000  Formation of a greenstone belt of the Acasta G...   \n",
-       "..          ...                                                ...   \n",
-       "142         105          Martha, last known passenger pigeon, dies   \n",
-       "143          83  The thylacine goes extinct in a Tasmanian zoo,...   \n",
-       "144          67           The Caribbean monk seal goes extinct[78]   \n",
-       "145          11  The baiji, the Yangtze river dolphin, becomes ...   \n",
-       "146           8   The western black rhinoceros is declared extinct   \n",
-       "\n",
-       "                                                source  start_date    end_date  \n",
-       "0    https://en.wikipedia.org/wiki/Timeline_of_the_...  4600000000  4600000000  \n",
-       "1    https://en.wikipedia.org/wiki/Timeline_of_the_...  4500000000  4500000000  \n",
-       "2    https://en.wikipedia.org/wiki/Timeline_of_the_...  4404000000  4404000000  \n",
-       "3    https://en.wikipedia.org/wiki/Timeline_of_the_...  4280000000  4280000000  \n",
-       "4    https://en.wikipedia.org/wiki/Timeline_of_the_...  4000000000  4000000000  \n",
-       "..                                                 ...         ...         ...  \n",
-       "142  https://en.wikipedia.org/wiki/Timeline_of_the_...         105         105  \n",
-       "143  https://en.wikipedia.org/wiki/Timeline_of_the_...          83          83  \n",
-       "144  https://en.wikipedia.org/wiki/Timeline_of_the_...          67          67  \n",
-       "145  https://en.wikipedia.org/wiki/Timeline_of_the_...          11          11  \n",
-       "146  https://en.wikipedia.org/wiki/Timeline_of_the_...           8           8  \n",
-       "\n",
-       "[147 rows x 5 columns]"
-      ]
-     },
-     "execution_count": 267,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df = scrape_table(\"https://en.wikipedia.org/wiki/Timeline_of_the_evolutionary_history_of_life\",\n",
-    "                  columns=['Date', 'Event'],\n",
-    "                  rename={'Date': 'date'},\n",
-    "                  date_col='date',\n",
-    "                  save='../data/wikipedia_evolutionary_history_of_life.csv',\n",
-    "                  parse=True\n",
-    ")\n",
-    "\n",
-    "df"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 268,
+   "execution_count": 298,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -439,8 +246,202 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<br><br>\n",
+    "\n",
+    "- - - \n",
+    "- - - \n",
+    "\n",
+    "<br>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Code"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 270,
+   "execution_count": 297,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>date</th>\n",
+       "      <th>event</th>\n",
+       "      <th>source</th>\n",
+       "      <th>start_date</th>\n",
+       "      <th>end_date</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <td>0</td>\n",
+       "      <td>1000000</td>\n",
+       "      <td>First coyotes</td>\n",
+       "      <td>https://en.wikipedia.org/wiki/Timeline_of_the_...</td>\n",
+       "      <td>1000000</td>\n",
+       "      <td>1000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>1</td>\n",
+       "      <td>1000000000</td>\n",
+       "      <td>The first non-marine eukaryotes move onto land...</td>\n",
+       "      <td>https://en.wikipedia.org/wiki/Timeline_of_the_...</td>\n",
+       "      <td>1000000000</td>\n",
+       "      <td>1000000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>2</td>\n",
+       "      <td>1200000</td>\n",
+       "      <td>Evolution of Homo antecessor. The last members...</td>\n",
+       "      <td>https://en.wikipedia.org/wiki/Timeline_of_the_...</td>\n",
+       "      <td>1200000</td>\n",
+       "      <td>1200000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>3</td>\n",
+       "      <td>1700000</td>\n",
+       "      <td>Extinction of australopithecines</td>\n",
+       "      <td>https://en.wikipedia.org/wiki/Timeline_of_the_...</td>\n",
+       "      <td>1700000</td>\n",
+       "      <td>1700000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>4</td>\n",
+       "      <td>10000000</td>\n",
+       "      <td>Grasslands and savannas are established, diver...</td>\n",
+       "      <td>https://en.wikipedia.org/wiki/Timeline_of_the_...</td>\n",
+       "      <td>10000000</td>\n",
+       "      <td>10000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>142</td>\n",
+       "      <td>90000000</td>\n",
+       "      <td>Extinction of ichthyosaurs. Earliest snakes an...</td>\n",
+       "      <td>https://en.wikipedia.org/wiki/Timeline_of_the_...</td>\n",
+       "      <td>90000000</td>\n",
+       "      <td>90000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>143</td>\n",
+       "      <td>95000000</td>\n",
+       "      <td>First crocodilians evolve</td>\n",
+       "      <td>https://en.wikipedia.org/wiki/Timeline_of_the_...</td>\n",
+       "      <td>95000000</td>\n",
+       "      <td>95000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>144</td>\n",
+       "      <td>1200000000</td>\n",
+       "      <td>Meiosis and sexual reproduction are present in...</td>\n",
+       "      <td>https://en.wikipedia.org/wiki/Timeline_of_the_...</td>\n",
+       "      <td>1200000000</td>\n",
+       "      <td>1200000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>145</td>\n",
+       "      <td>1850000000</td>\n",
+       "      <td>Eukaryotic cells appear. Eukaryotes contain me...</td>\n",
+       "      <td>https://en.wikipedia.org/wiki/Timeline_of_the_...</td>\n",
+       "      <td>1850000000</td>\n",
+       "      <td>1850000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>146</td>\n",
+       "      <td>600</td>\n",
+       "      <td>The moa and its predator, Haast's eagle, die o...</td>\n",
+       "      <td>https://en.wikipedia.org/wiki/Timeline_of_the_...</td>\n",
+       "      <td>600</td>\n",
+       "      <td>600</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>147 rows × 5 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "           date                                              event  \\\n",
+       "0       1000000                                      First coyotes   \n",
+       "1    1000000000  The first non-marine eukaryotes move onto land...   \n",
+       "2       1200000  Evolution of Homo antecessor. The last members...   \n",
+       "3       1700000                   Extinction of australopithecines   \n",
+       "4      10000000  Grasslands and savannas are established, diver...   \n",
+       "..          ...                                                ...   \n",
+       "142    90000000  Extinction of ichthyosaurs. Earliest snakes an...   \n",
+       "143    95000000                          First crocodilians evolve   \n",
+       "144  1200000000  Meiosis and sexual reproduction are present in...   \n",
+       "145  1850000000  Eukaryotic cells appear. Eukaryotes contain me...   \n",
+       "146         600  The moa and its predator, Haast's eagle, die o...   \n",
+       "\n",
+       "                                                source  start_date    end_date  \n",
+       "0    https://en.wikipedia.org/wiki/Timeline_of_the_...     1000000     1000000  \n",
+       "1    https://en.wikipedia.org/wiki/Timeline_of_the_...  1000000000  1000000000  \n",
+       "2    https://en.wikipedia.org/wiki/Timeline_of_the_...     1200000     1200000  \n",
+       "3    https://en.wikipedia.org/wiki/Timeline_of_the_...     1700000     1700000  \n",
+       "4    https://en.wikipedia.org/wiki/Timeline_of_the_...    10000000    10000000  \n",
+       "..                                                 ...         ...         ...  \n",
+       "142  https://en.wikipedia.org/wiki/Timeline_of_the_...    90000000    90000000  \n",
+       "143  https://en.wikipedia.org/wiki/Timeline_of_the_...    95000000    95000000  \n",
+       "144  https://en.wikipedia.org/wiki/Timeline_of_the_...  1200000000  1200000000  \n",
+       "145  https://en.wikipedia.org/wiki/Timeline_of_the_...  1850000000  1850000000  \n",
+       "146  https://en.wikipedia.org/wiki/Timeline_of_the_...         600         600  \n",
+       "\n",
+       "[147 rows x 5 columns]"
+      ]
+     },
+     "execution_count": 297,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df = scrape_table(\"https://en.wikipedia.org/wiki/Timeline_of_the_evolutionary_history_of_life\",\n",
+    "                  columns=['Date', 'Event'],\n",
+    "                  rename={'Date': 'date', 'Event': 'event'},\n",
+    "                  date_col='date',\n",
+    "                  save='../data/wikipedia_evolutionary_history_of_life.csv',\n",
+    "                  sort='Date',\n",
+    "                  parse=True\n",
+    ")\n",
+    "\n",
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 299,
    "metadata": {},
    "outputs": [
     {
@@ -702,7 +703,7 @@
        "21  https://en.wikipedia.org/wiki/Timeline_of_natu...     2580000           0  "
       ]
      },
-     "execution_count": 270,
+     "execution_count": 299,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -712,10 +713,9 @@
     "                  columns=['Started', 'Period'],\n",
     "                  rename={'Started': 'date', 'Period': 'event'},\n",
     "                  date_col='date',\n",
-    "                  save=False,\n",
-    "                  to_next_date=True\n",
-    "#                   save='../data/wikipedia_evolutionary_history_of_life.csv',\n",
-    "#                   parse=True\n",
+    "                  to_next_date=True,\n",
+    "                  save='../data/wikipedia_timeline_of_natural_history.csv',\n",
+    "                  parse=True\n",
     ")\n",
     "\n",
     "df"
