galactocentric coordinate scripts

--- a/scripts/GalacticDistance_Calc.ipynb
+++ b/scripts/GalacticDistance_Calc.ipynb
@@ -2,106 +2,114 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [],
    "source": [
     "## Calculate how far someone travelled through the Galaxy, given a birth date and death date\n",
     "\n",
     "from astropy import units as u\n",
+    "from datetime import datetime\n",
+    "from datetime import date\n",
+    "from decimal import Decimal\n",
     "\n",
     "## Definitions\n",
     "\n",
     "R_gal = 8.4*u.parsec*1000 #kpc\n",
     "v_0 = 220*u.kilometer/u.second #km/s\n",
     "\n",
+    "voyagerDist = (147*u.au).to(u.parsec)\n",
+    "\n",
     "#R_gal.to(u.m)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 113,
    "metadata": {},
    "outputs": [],
    "source": [
     "## Take birth date and death dates as input\n",
+    "(birthDay, birthMonth, birthYear, deathDay, deathMonth, deathYear)=(0,0,0,0,0,0)\n",
     "\n",
-    "birthDay = 11 ## Write something to take this from a drop down list\n",
-    "birthMonth = 9\n",
-    "birthYear = 1990\n",
-    "#birthTime = 11:09:00\n",
     "\n",
-    "deathDay = 24 ## Write something to take this from a drop down list\n",
-    "deathMonth = 10\n",
-    "deathYear = 2190\n",
-    "#deathTime = 12:00:00\n",
+    "def travelTime(birthDay = birthDay, birthMonth = birthMonth, birthYear = birthYear, deathDay = datetime.now().day, deathMonth = datetime.now().month, deathYear = datetime.now().year):\n",
+    "\n",
+    "    birthDate = date(birthYear, birthMonth, birthDay)\n",
+    "    start = date(birthDate.year, 1, 1).toordinal()\n",
+    "    year_length = date(birthDate.year+1, 1, 1).toordinal() - start\n",
+    "    birthDateFrac = birthDate.year + float(birthDate.toordinal() - start) / year_length\n",
+    "    \n",
+    "    #print(birthDateFrac)\n",
+    "    \n",
+    "    deathDate = date(deathYear, deathMonth, deathDay)\n",
+    "    start = date(deathDate.year, 1, 1).toordinal()\n",
+    "    year_length = date(deathDate.year+1, 1, 1).toordinal() - start\n",
+    "    deathDateFrac = deathDate.year + float(deathDate.toordinal() - start) / year_length\n",
+    "    \n",
+    "    #print(deathDateFrac)\n",
+    "\n",
+    "    \n",
+    "    travelTime = (deathDate - birthDate)\n",
+    "    print(\"#####################\")\n",
+    "    print(\"#### TRAVEL TIME ####\")\n",
+    "    print(\"#####################\") \n",
+    "    print(travelTime.days/365.24*u.year)\n",
+    "\n",
+    "    # Calculate distance object traveled through space during travel time\n",
+    "    distance = (v_0*travelTime.days*86400*u.second)\n",
+    "    print(\"\")\n",
+    "    print(\"#####################\")\n",
+    "    print(\"## TRAVEL DISTANCE ##\")\n",
+    "    print(\"#####################\") \n",
+    "    print(distance)\n",
+    "    print(distance.to(u.parsec))\n",
+    "    print(distance.to(u.AU))\n",
+    "    voyagerFrac = distance.to(u.parsec)/(voyagerDist)\n",
+    "    print(str(voyagerFrac) + str(\" times the distance to Voyager.\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 116,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "#####################\n",
+      "#### TRAVEL TIME ####\n",
+      "#####################\n",
+      "29.11784032417041 yr\n",
+      "\n",
+      "#####################\n",
+      "## TRAVEL DISTANCE ##\n",
+      "#####################\n",
+      "202150080000.0 km\n",
+      "0.006551237926286544 pc\n",
+      "1351.289821533536 AU\n",
+      "9.19244776553426 times the distance to Voyager.\n"
+     ]
+    }
+   ],
+   "source": [
+    "## TEST \n",
+    "\n",
+    "startDay = 11 ## Write something to take this from a drop down list\n",
+    "startMonth = 9\n",
+    "startYear = 1990\n",
+    "#startTime = 11:09:00\n",
+    "\n",
+    "endDay = 24 ## Write something to take this from a drop down list\n",
+    "endMonth = 10\n",
+    "endYear = 2190\n",
+    "#endTime = 12:00:00\n",
     "\n",
     "#dat['decimal_date']=dat.index.year+ (dat.index.dayofyear -1)/365\n",
     "\n",
-    "birthDate = 0 ## UPDATE WITH REAL DATES FROM INPUT\n",
-    "deathDate = 7 ## UPDATE WITH REAL DATES FROM INPUT\n",
-    "\n",
-    "travelTime = (deathDate - birthDate)*u.year"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 27,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0.00157497673418271 pc\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Calculate distance object traveled through space during travel time\n",
-    "\n",
-    "distance = (v_0*travelTime.to(u.second)).to(u.parsec)\n",
-    "print(distance)\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 31,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0.0007126761112366016 pc\n"
-     ]
-    }
-   ],
-   "source": [
-    "voyagerDist = (147*u.au).to(u.parsec)\n",
-    "print(voyagerDist)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 32,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "2.2099474212063672\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(distance/voyagerDist)"
+    "#travelTime(startDay, startMonth, startYear, endDay, endMonth, endYear)\n",
+    "travelTime(startDay, startMonth, startYear)"
    ]
   },
   {
