Galactocentric positions updated

--- a/scripts/GalactocentricCoords_fromDate.ipynb
+++ b/scripts/GalactocentricCoords_fromDate.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 137,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,6 +15,7 @@
     "import math\n",
     "from astropy.coordinates import SkyCoord\n",
     "from astropy.coordinates import CylindricalRepresentation\n",
+    "import csv\n",
     "\n",
     "\n",
     "## Definitions\n",
@@ -30,58 +31,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 141,
    "metadata": {},
    "outputs": [],
    "source": [
-    "## Take birth date and death dates as input\n",
-    "(startYear)=(0)\n",
+    "# Open CSV File\n",
     "\n",
-    "def singleEventTime(startYear = startYear):\n",
+    "(sheetIndex, date, eventTitle, eventText, source, color, imageName, phi, x, y, z)= (0,0,0,0,0,0,0,0,0,0,0)\n",
+    "\n",
+    "eventList = []\n",
+    "eventList.append(['sheetIndex','date','eventTitle','eventText','source','color','imageName','phi','x','y','z'])\n",
+    "\n",
+    "fileIn = '../data/master_event_table.csv'\n",
+    "datafile = open(fileIn, 'r')\n",
+    "csvFile = []\n",
+    "for row in datafile:\n",
+    "    csvFile.append(row.strip().split(','))\n",
     "    \n",
-    "    galPhi=(((2019 + startYear) % galRotPeriod.value)/galRotPeriod.value*2*math.pi)\n",
+    "# Save Galactic Radius Info from CSV to new list\n",
+    "index = 1\n",
+    "while index < len(csvFile) :\n",
+    "    sheetIndex = int(csvFile[index][0])\n",
+    "    date = float(csvFile[index][1])\n",
+    "    eventTitle = str(csvFile[index][2])\n",
+    "    eventText = str(csvFile[index][2])\n",
+    "    source = str(csvFile[index][3])\n",
+    "    color = str('blue')\n",
+    "    imageName = str('..')\n",
     "    \n",
-    "    print()\n",
-    "    print(\"Start Date = \"+str(startYear))\n",
-    "    print(\"Years from Today  = \" + str(2019+startYear))\n",
-    "    print(\"Phi (Radians) = \" + str(galPhi))\n",
-    "    print()\n",
+    "    phi=(((2019 + date) % galRotPeriod.value)/galRotPeriod.value*2*math.pi)\n",
+    "        \n",
+    "    c = SkyCoord(CylindricalRepresentation(rho = R_gal, phi = phi*u.radian, z=0*u.kpc), frame = 'galactocentric')\n",
+    "    x=c.x.value\n",
+    "    y=c.y.value\n",
+    "    z=c.z.value\n",
+    "\n",
     "    \n",
-    "    c = SkyCoord(CylindricalRepresentation(rho = R_gal, phi = galPhi*u.radian, z=0*u.kpc), frame = 'galactocentric')\n",
-    "    print(c.x)\n",
-    "    print(c.y)\n",
-    "    print(c.z)\n",
-    "    print(c)\n",
-    "    "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 113,
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "Start Date = -110000000\n",
-      "Years from Today  = -109997981\n",
-      "Phi (Radians) = 3.141650316094953\n",
-      "\n",
-      "-8.299999986201398 kpc\n",
-      "-0.00047859879256208486 kpc\n",
-      "0.0 kpc\n",
-      "<SkyCoord (Galactocentric: galcen_coord=<ICRS Coordinate: (ra, dec) in deg\n",
-      "    (266.4051, -28.936175)>, galcen_distance=8.3 kpc, galcen_v_sun=(11.1, 232.24, 7.25) km / s, z_sun=27.0 pc, roll=0.0 deg): (x, y, z) in kpc\n",
-      "    (-8.29999999, -0.0004786, 0.)>\n"
-     ]
-    }
-   ],
-   "source": [
-    "singleEventTime(startYear=-110000000)"
+    "    eventList.append([sheetIndex,date,eventTitle,eventText,source,color,imageName,phi,x,y,z])\n",
+    "    \n",
+    "    index += 1\n",
+    "    \n",
+    "with open(\"../data/singleEvents_Coords.csv\", \"w\") as f:\n",
+    "        writer = csv.writer(f)\n",
+    "        writer.writerows(eventList)"
    ]
   },
   {
