update scraper and timeline data
cleaning up the event info

--- a/notebooks/scraping wikipedia.ipynb
+++ b/notebooks/scraping wikipedia.ipynb
@@ -26,8 +26,8 @@
     "    PROJECT :\n",
     "\"\"\";\n",
     "\n",
-    "__author__ = ''\n",
-    "__version__ = ''"
+    "__author__ = 'Nathaniel Starkmana'\n",
+    "__version__ = '1.0.0'"
    ]
   },
   {
@@ -140,6 +140,7 @@
     "    # parse date\n",
     "    if parse:\n",
     "        df = parse_dates(df, date_col=date_col)\n",
+    "        df = parse_events(df, event_col='event')\n",
     "        \n",
     "    if make_time_negative:\n",
     "        df[date_col] = -df[date_col]\n",
@@ -163,6 +164,7 @@
     "    if combine_to_master:\n",
     "        add_to_master_table(df, sort=sort)\n",
     "    return df\n",
+    "# /def\n",
     "\n",
     "\n",
     "def concatenate_tables(*dfs, sort=None):\n",
@@ -171,17 +173,19 @@
     "        cdf.sort_values(sort, inplace=True)\n",
     "    cdf.reset_index(drop=True, inplace=True)\n",
     "    return cdf\n",
+    "# /def\n",
     "\n",
     "\n",
     "def add_to_master_table(df, sort):\n",
     "    try:\n",
-    "        mdf = pd.read_csv('../data/master_table.csv')\n",
+    "        mdf = pd.read_csv('../data/master_table.csv', sep=';')\n",
     "    except:\n",
-    "        df.to_csv('../data/master_table.csv', index=False)\n",
+    "        df.to_csv('../data/master_table.csv', index=False, sep=';')\n",
     "    else:\n",
     "        new_df = concatenate_tables(mdf, df, sort='date')\n",
-    "        new_df.to_csv('../data/master_table.csv', index=False)\n",
-    "    return df\n"
+    "        new_df.to_csv('../data/master_table.csv', index=False, sep=';')\n",
+    "    return df\n",
+    "# /def"
    ]
   },
   {
@@ -205,7 +209,7 @@
     "            return parse_start(date[1:])\n",
     "        else:\n",
     "            return date\n",
-    "        \n",
+    "\n",
     "    def parse_parenthesis(date):\n",
     "        date = date.strip()\n",
     "        if '(' in date:\n",
@@ -238,7 +242,7 @@
     "        else:\n",
     "            return date, 1\n",
     "    # /def\n",
-    "    \n",
+    "\n",
     "    def parse_number(number):\n",
     "        if isinstance(number, (int, float)):\n",
     "            return float(number)\n",
@@ -259,13 +263,10 @@
     "        else:\n",
     "            return date\n",
     "    \n",
-    "    \n",
     "    dates = df[date_col]\n",
     "    \n",
     "    for i, date in dates.iteritems():\n",
-    "        \n",
-    "#         print(i, date, end='')\n",
-    "        \n",
+    "\n",
     "        if isinstance(date, str):\n",
     "            date = date.lower().strip()\n",
     "            # parse unit\n",
@@ -277,12 +278,41 @@
     "\n",
     "            # assign\n",
     "            dates.iloc[i] = parse_number(date) * unit\n",
-    "            \n",
-    "#         print(',', dates.iloc[i], end='\\n')\n",
-    "    \n",
+    "\n",
     "    # reassigning\n",
     "    df[date_col] = dates\n",
-    "    return df"
+    "    return df\n",
+    "# /def"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def parse_events(df, event_col='event'):\n",
+    "    \n",
+    "    def strip_citation(event):\n",
+    "        for i in range(1000):\n",
+    "            event = event.strip(f'[{i}]')\n",
+    "        return event\n",
+    "    \n",
+    "    events = df[event_col]\n",
+    "    \n",
+    "    for i, event in events.iteritems():\n",
+    "        if isinstance(event, str):\n",
+    "            \n",
+    "            event = event.strip()\n",
+    "            event = strip_citation(event)        \n",
+    "    \n",
+    "    df[event_col] = events\n",
+    "    \n",
+    "    \n",
+    "    return df\n",
+    "            \n",
+    "            \n",
+    "            "
    ]
   },
   {
@@ -306,7 +336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -461,7 +491,7 @@
        "[147 rows x 5 columns]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -483,7 +513,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -745,7 +775,7 @@
        "21  https://en.wikipedia.org/wiki/Timeline_of_natu...    -2580000           0  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -767,7 +797,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -922,7 +952,7 @@
        "[72 rows x 5 columns]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -966,33 +996,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv('../data/master_table.csv')"
+    "df = pd.read_csv('../data/master_table.csv', sep=';')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
     "rangedf = df.loc[df['start_date'] != df['end_date']]\n",
     "\n",
-    "rangedf.to_csv('../data/master_range_table.csv')"
+    "rangedf.to_csv('../data/master_range_table.csv', sep=';')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
     "eventdf = df.loc[df['start_date'] == df['end_date']]\n",
     "\n",
-    "eventdf.to_csv('../data/master_event_table.csv')"
+    "eventdf.to_csv('../data/master_event_table.csv', sep=';')"
    ]
   },
   {
